Using java 22 version and java util gatherer