@@ -8,7 +8,7 @@
     <parent>
         <artifactId>hzt-utils</artifactId>
         <groupId>org.hzt.utils</groupId>
-        <version>1.0.3.21</version>
+        <version>1.0.3.22</version>
     </parent>
 
     <artifactId>graph-utils</artifactId>
@@ -23,5 +23,25 @@
             <artifactId>core</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
